--- a/style.css
+++ b/style.css
@@ -1,28 +1,56 @@
 body {
-    background-color: #ffff99;
-  }
-  
-  
-  h1 {
-    color: #ff6600;
-    border: #ff6600;
-    border-style: solid;
-    border-width: 4px;
-    padding-left: 20px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    font-size: 70px;
-    font-family: 'Impact';
-  }
-   
-   
-  h2 {
-      background-color: #ffcc00;
-      
-      padding-left: 20px;
-      padding-top: 30px;
-      padding-bottom: 30px;
-      font-family: 'Helvetica';
-      font-size: 35px;
-  }
+  background-color: #006666;
+  color: white;
+  padding: 20px 20px 20px 20px;
+}
+
+h1:hover {
+  text-decoration: underline;
+}
+
+h2:hover {
+  text-decoration: underline;
+}
+
+input {
+  border: 3px white solid;
+}
+input:hover {
+  border: 3px yellow solid;
+}
+input:focus {
+  background-color: yellow;
+  border: 3px yellow solid;
+}
+button {
+  background-color: white;
+  color: #006666;
+  border: 3px white solid;
+}
+button:hover {
+  background-color: #006666;
+  color: white;
+}
+
+button:active {
+  background-color: #33cc99;
+}
+
+li {
+  background-color: #006666;
+  color: white;
+}
+
+p:hover {
+  background-color: #33cc99;
+  color: white;
+}
+
+a {
+  color: white;
+}
+
+a:hover {
+  color: yellow;
+}
    
